[package]
name = "ya-net-gateway-client"
description = "ya-net-gateway Management API client"
authors = ["Golem Factory <contact@golem.network>"]
homepage = "https://github.com/golemfactory/ya-runtime-net-gateway"
repository = "https://github.com/golemfactory/ya-runtime-net-gateway"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
ya-net-gateway-model = { version = "0.1", path = "../ya-net-gateway-model"}

actix-http = {version = "1" }
anyhow = { version = "1" }
awc = { version = "1" }
chrono = { version = "0.4", features = ["serde"] }
http = { version = "0.2" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
log = { version ="0.4" }
thiserror = {version ="1.0"}
